<resources>
    <string name="app_name">i-waste</string>
    <string name="no_account">Do not have account? <b>Sign Up Here!</b></string>
    <string name="descrip1"><b>Bio-waste</b> is defined as biodegradable garden and park waste, food and kitchen waste from households, restaurants, caterers and retail premises, and comparable waste from food processing plants. It does not include forestry or agricultural residues, manure, sewage sludge, or other biodegradable waste such as natural textiles, paper or processed wood. It also excludes those by-products of food production that never become waste.</string>
    <string name="descrip2">A <b>Non-Biodegradable</b> material can be defined as a kind of substance which cannot be broken down by natural organisms and acts as a source of pollution.Unlike biodegradable wastes, non-biodegradable cannot be easily handled. Non-biodegradable wastes are those who cannot be decomposed or dissolved by natural agents. They remain on earth for thousands of years without any degradation. Hence, the threat caused by them is also more critical. A notable example is the plastics which are a commonly used material in almost every field. To give these plastics a long lasting effect, improved quality plastics are being put to use. This made them more temperature resistant and more durable even after use. Other examples are cans, metals, and chemicals for agricultural and industrial purposes. They are the main causes of air, water and soil pollution and diseases likecancer.</string>
    <string name="descrip3"><b>Recyclables</b> means any material, which would otherwise be disposed of or discarded, which is separated from Municipal Waste at the source of generation, so as to render it usable in a process, or alone, such that it can be returned to the economic mainstream in the form of raw materials or products. Examples of recyclables are: newspaper, glass bottles, High Density Polyethylene containers, aluminum food and beverage containers, chipboard, and corrugated containers. Recyclables do not include any of the following, and do not include any materials removed or separated from, or containing the following: Unacceptable Wastes, Landscape Wastes, or Construction or Demolition Debris. Sample 1 Sample 2 Sample 3 Based on 5 documents Save Copy Recyclables means waste materials that are collected, separated, or processed and used as raw materials or products.</string>
    <string name="ask">What are the waste categories?</string>
    <string name="classification">There are three waste categories namely : <b>Biodegradable</b>, <b>Non-Biodegradable</b> and <b>Recyclable</b>.</string>
</resources>