<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_green"
    tools:context=".DefinitionActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="413dp"
        android:layout_height="41dp"
        android:background="@drawable/shape_toolbar02"
        tools:ignore="DuplicateIds,MissingConstraints">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/teal_700"
            android:contentDescription="back"
            android:padding="10dp"
            android:src="@drawable/ic_back_white" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="@string/ask"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <ScrollView
        android:layout_width="352dp"
        android:layout_height="644dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"
        tools:layout_editor_absolutelyX="1dp"
        tools:layout_editor_absolutelyY="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/classification"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.314" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:src="@drawable/img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Biodegradable"
                android:textColor="@color/cardview_dark_background"
                android:textStyle="bold" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="174dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginTop="16dp"
                android:text="@string/descrip1"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/img_10" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_2" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Non-Biodegradable"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="314dp"
                android:layout_height="331dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/descrip2"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/img_7"></ImageView>


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_9"></ImageView>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Recyclable"
                android:textStyle="bold"
                android:textColor="@color/cardview_dark_background"/>

            <TextView
                android:layout_width="312dp"
                android:layout_height="330dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/cardview_dark_background"
                android:text="@string/descrip3"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/img_4"></ImageView>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_5"></ImageView>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>